# basset

./: .gitattributes  CONTRIBUTING.md  README.md  biome.json  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
locales/: ar.json  en.json  pt.json
src/: App.tsx  i18n.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/models/2stems/: saved_model.pb
src-tauri/resources/: spleeter.lib
src-tauri/resources/models/2stems/: saved_model.pb
src-tauri/src/: lib.rs  main.rs
src/components/screens/FileUpload/: DownloadFromInternet.tsx  FileUpload.tsx  OnBoardDialog.tsx  OperationButtonsDialog.tsx
src/components/screens/Home/: Home.tsx  TabItem.tsx
src/components/screens/Operation/: MediaInfoSidebar.tsx  Operation.tsx  index.tsx
src/components/ui/: Alert.tsx  AudioQualitySelect.tsx  CompressSlider.tsx  Dialog.tsx  ExecuteBtn.tsx  FileUpload.tsx  FormatSelect.tsx  Header.tsx  ImageFileUploader.tsx  NotficationPromptBtn.tsx  OnBoardDialog.tsx  Progress.tsx  QualitySelect.tsx  Select.tsx  Slider.tsx  Switch.tsx  TabItem.tsx  Tabs.tsx
src/components/ui/AV/: AVControls.tsx  AVPlayer.tsx
src/components/ui/AVPlayer/: AVControls.tsx  AVPlayer.tsx  CurrTimeIndicator.tsx  CutSlider.tsx  CutTimestampsInput.tsx  index.tsx
src/components/ui/Header/: Header.tsx  LanguageSelect.tsx  ModeToggle.tsx  NotficationPromptBtn.tsx  index.tsx
src/components/ui/Operations/: Compress.tsx  Convert.tsx  ConvertToVideo.tsx  Cut.tsx  Quality.tsx  RemoveMusic.tsx  Trim.tsx
src/components/ui/Tabs/: Compress.tsx  Convert.tsx  ConvertToAudio.tsx  ConvertToVideo.tsx  Cut.tsx  Quality.tsx  RemoveMusic.tsx  Trim.tsx
src/components/ui/shadcn/: dialog.tsx  slider.tsx
src/components/utils/: AudioQualitySelect.tsx  CompressSlider.tsx  ExecuteBtn.tsx  FormatSelect.tsx  ImageFileUploader.tsx  LanguageSelect.tsx  ModeToggle.tsx  OutputPath.tsx  QualitySelect.tsx
src/contexts/: FileProvider.tsx  ThemeProvider.tsx
src/hooks/: useFFmpeg.tsx  useImage.tsx  useSpleeter.tsx
src/locales/: ar.json  en.json  pt.json
src/stores/: useFileStore.ts  useOperationStore.ts
src/utils/: SpleeterHelper.ts  command.ts  ffmpeg.ts  ffmpegHelperUtils.ts  fsUtils.ts  getPercentage.ts  timestampFormatter.ts  timestampUnformatter.ts
