[package]
name = "basset"
version = "0.1.0"
description = "Utility for video/audio cutting, compressing, converting and quality changing"
authors = ["Mohmmad Abdul-Tawab"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "updater", "protocol-all", "fs-exists", "fs-create-dir", "fs-write-file", "fs-read-file", "notification-all", "path-all", "dialog-open", "shell-execute", "shell-sidecar", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
